--- a/Employee_Attrition.ipynb
+++ b/Employee_Attrition.ipynb
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 14,999 unique employees in this dataset."
+    "**There are 14,999 unique employees in this dataset.**"
    ]
   },
   {
@@ -394,9 +394,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A moderate correlation of *r* = 0.42 exists between 'average_monthly_hours' and 'number_project.' 'Number_project' is less moderately correlated to 'last_evaluation' at *r* = 0.35. 'Average_monthly_hours' is slightly less moderately correlated to 'last_evaluation' at *r* = 0.34. 'Satisfaction_level' is also moderately correlated with the target 'Attrition' with a correlation coefficient *r* = -0.39.\n",
+    "**A moderate correlation of *r* = 0.42 exists between 'average_monthly_hours' and 'number_project.' 'Number_project' is less moderately correlated to 'last_evaluation' at *r* = 0.35. 'Average_monthly_hours' is slightly less moderately correlated to 'last_evaluation' at *r* = 0.34. 'Satisfaction_level' is also moderately correlated with the target 'Attrition' with a correlation coefficient *r* = -0.39.**\n",
     "    \n",
-    "From this analysis and the ensuing scatter plots below, it can be said that there exists a negative relationship between employee satisfaction and attrition. There exist almost no relationships between attrition and  other predictors, except 'time_spend_company', where *r* = 0.14, and 'work_accident', where *r* = -0.15. "
+    "**From this analysis and the ensuing scatter plots below, it can be said that there exists a negative relationship between employee satisfaction and attrition. There exist almost no relationships between attrition and  other predictors, except 'time_spend_company', where *r* = 0.14, and 'work_accident', where *r* = -0.15.**"
    ]
   },
   {
@@ -1127,7 +1127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ensuing bar graphs measure interdepartmental attrition. For example, sales has the highest attrition (employees who left), but also the highest retention (those who stayed). Normalizing this dsitribution, we see an uptick in hr department attrition in terms of rate, but a higher retention rate too. Sales, support, and technical departments remain at about equal attrition rates, and high retention across the board."
+    "**The ensuing bar graphs measure interdepartmental attrition. For example, sales has the highest attrition (employees who left), but also the highest retention (those who stayed). Normalizing this dsitribution, we see an uptick in hr department attrition in terms of rate, but a higher retention rate too. Sales, support, and technical departments remain at about equal attrition rates, and high retention across the board.**"
    ]
   },
   {
@@ -1172,7 +1172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ensuing bar graphs measure attrition by salary. For example, there exists a higher prevalance in lower salaries than medium and higher salaries, respectively. Among the lower salaries, more employees stayed within the company than those who left. Normalizing the distribution, we see the same trends; however, in terms of attrition rates, the lowest among the three categories is evident in the higher salaries. Lower salaries show the highest attrition rate, and medium salaries follow."
+    "**The ensuing bar graphs measure attrition by salary. For example, there exists a higher prevalance in lower salaries than medium and higher salaries, respectively. Among the lower salaries, more employees stayed within the company than those who left. Normalizing the distribution, we see the same trends; however, in terms of attrition rates, the lowest among the three categories is evident in the higher salaries. Lower salaries show the highest attrition rate, and medium salaries follow.**"
    ]
   },
   {
@@ -1541,6 +1541,13 @@
     "print('The mean is %s.'%mean_1_2)\n",
     "print('The standard deviation is %s.'%std_1_2)\n",
     "print('The median is %s.'%median_1_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**All of the examined distributions are normal.**"
    ]
   },
   {
