--- a/Employee_Attrition.ipynb
+++ b/Employee_Attrition.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# read in the dataset from excel\n",
-    "#hello\n",
+    "\n",
     "url = 'https://raw.githubusercontent.com/munipayal1/\\\n",
     "MADS-505-Final-Project/main/HR_Employee_Data.csv'\n",
     "hr = pd.read_csv(url)"
@@ -4007,7 +4007,7 @@
    "source": [
     "**References**\n",
     "\n",
-    "Galarnyk, M. (2021, February 3). How to Speed up Scikit-Learn Model Training. *Anyscale.* https://www.anyscale.com/blog/how-to-speed-up-scikit-learn-model-training"
+    "Galarnyk, M. (2021, February 3). How to Speed up Scikit-Learn Model Training. *Anyscale.* https://www.anyscale.com/blog/how-to-speed-up-scikit-learn-model-training ."
    ]
   }
  ],
@@ -4016,7 +4016,8 @@
    "hash": "f32dcfe4e001488a2993d75b88b5dcb6f09ceb1202ee099b5dc96948e212b01d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -4029,7 +4030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
